refactor: DTO 레코드 변환으로 인한 리팩터링(중복 코드 수정)